2009-07-01	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp01/sp01.doc, sp01/task1.c, sp16/sp16.doc, sp16/task5.c: Bypass
	RTEMS_MILLISECONDS_TO_TICKS and RTEMS_MICROSECONDS_TO_TICKS to
	improve coverage.

2009-07-01	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp01/task1.c: Use RTEMS_MILLISECONDS_TO_TICKS to improve coverage.

2009-06-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* spfatal10/.cvsignore, spfatal10/Makefile.am, spfatal10/init.c,
	spfatal10/spfatal10.doc, spfatal10/spfatal10.scn: New files.

2009-06-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, spprintk/init.c, spprintk/spprintk.scn:
	Enhance spprintk. Add two new fatal error tests to cover
	__assert_func.
	* spfatal11/.cvsignore, spfatal11/Makefile.am, spfatal11/init.c,
	spfatal11/spfatal11.doc, spfatal11/spfatal11.scn: New files.

2009-06-18	Chris Johns <chrisj@rtems.org>

	* sp35/priinv.c, sp35/priinv.c: Declare unions volatile to
	workaround the H8300 gcc bug.

2009-06-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp54/init.c: Fix spacing.

2009-06-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp02/sp02.doc, sp02/system.h: Update copyright year.

2009-06-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp02/sp02.doc, sp02/system.h: Add test case for configuring the IDLE

2009-06-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add new test.
	* sp54/.cvsignore, sp54/Makefile.am, sp54/init.c, sp54/sp54.doc,
	sp54/sp54.scn: New files.

2009-06-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add sp52 and sp53 based upon bug report
	from Sergio Faustino <sergio.faustino@edisoft.pt> regarding moving
	the time of day forward not making server based timers fire.
	* sp52/.cvsignore, sp52/Makefile.am, sp52/init.c, sp52/sp52.doc,
	sp52/sp52.scn, sp53/.cvsignore, sp53/Makefile.am, sp53/sp53.doc,
	sp53/sp53.scn: New files.

2009-05-22	Joel Sherrill <joel.sherrill@oarcorp.com>
