@@ -1,2 +1,22 @@
-*** TEST WATCHDOG ***
-*** END OF TEST WATCHDOG ***
+*** RTEMS WATCHDOG ***
+INIT - report on empty watchdog chain
+Watchdog Chain: Empty Chain 2036184
+Chain is empty
+INIT - rtems_timer_create - creating timer 1
+INIT - timer 1 has id (0x12010001)
+TA1 - rtems_timer_ident - identing timer 1
+TA1 - timer 1 has id (0x12010001)
+TA1 - rtems_clock_get - 09:00:00   12/31/1988
+TA1 - rtems_timer_fire_after - timer 1 in 3 seconds
+TA1 - rtems_task_suspend( RTEMS_SELF )
+TA1 - rtems_clock_get - 09:00:03   12/31/1988
+TA1 - rtems_timer_fire_after - timer 1 in 3 seconds
+TA1 - rtems_task_wake_after - 1 second
+TA1 - rtems_clock_get - 09:00:04   12/31/1988
+TA1 - rtems_timer_reset - timer 1
+Watchdog Chain: _Watchdog_Ticks_chain 202F530
+ 300   300 20325D0 20131A0 0x12010001 0
+== end of _Watchdog_Ticks_chain 
+TA1 - timer_deleting - timer 1
+*** END OF RTEMS WATCHDOG PROGRAM ***
+
