@@ -1,5 +1,10 @@
 2009-07-01	Joel Sherrill <joel.sherrill@OARcorp.com>
 
+	* spwatchdog/init.c, spwatchdog/spwatchdog.scn: Add test case of empty
+	chain for coverage.
+
+2009-07-01	Joel Sherrill <joel.sherrill@OARcorp.com>
+
 	* sp01/sp01.doc, sp01/task1.c, sp16/sp16.doc, sp16/task5.c: Bypass
 	RTEMS_MILLISECONDS_TO_TICKS and RTEMS_MICROSECONDS_TO_TICKS to
 	improve coverage.
